Big updates to make Airflow installation comprehensive.

--- a/services/airflow/airflow-webserver.service
+++ b/services/airflow/airflow-webserver.service
@@ -21,7 +21,7 @@ PIDFile=/run/airflow/webserver.pid
 EnvironmentFile=/etc/sysconfig/airflow
 User=airflow
 Group=airflow
-Type=forking
+Type=simple
 ExecStart=/bin/airflow webserver --pid /run/airflow/webserver.pid
 ExecReload=/bin/kill -s HUP $MAINPID
 ExecStop=/bin/kill -s TERM $MAINPID
