--- a/services/airflow/unittests.cfg
+++ b/services/airflow/unittests.cfg
@@ -1,9 +1,9 @@
 [core]
-airflow_home = /var/lib/airflow/airflow
-dags_folder = /var/lib/airflow/airflow/dags
-base_log_folder = /var/lib/airflow/airflow/logs
+airflow_home = /var/lib/airflow
+dags_folder = /var/lib/airflow/dags
+base_log_folder = /var/log/airflow
 executor = SequentialExecutor
-sql_alchemy_conn = sqlite:////var/lib/airflow/airflow/unittests.db
+sql_alchemy_conn = sqlite:////var/lib/airflow/unittests.db
 unit_test_mode = True
 load_examples = True
 donot_pickle = False
