--- a/services/airflow/airflow.cfg
+++ b/services/airflow/airflow.cfg
@@ -1,13 +1,15 @@
 [core]
 # The home folder for airflow, default is ~/airflow
-airflow_home = /var/lib/airflow/airflow
+airflow_home = /var/lib/airflow
 
 # The folder where your airflow pipelines live, most likely a
 # subfolder in a code repository
-dags_folder = /var/lib/airflow/airflow/dags
+# This path must be absolute
+dags_folder = /var/lib/airflow/dags
 
-# The folder where airflow should store its log files. This location
-base_log_folder = /var/lib/airflow/airflow/logs
+# The folder where airflow should store its log files
+# This path must be absolute
+base_log_folder = /var/log/airflow
 
 # Airflow can store logs remotely in AWS S3 or Google Cloud Storage. Users
 # must supply a remote location URL (starting with either 's3://...' or
@@ -17,17 +19,17 @@ remote_base_log_folder =
 remote_log_conn_id =
 # Use server-side encryption for logs stored in S3
 encrypt_s3_logs = False
-# deprecated option for remote log storage, use remote_base_log_folder instead!
+# DEPRECATED option for remote log storage, use remote_base_log_folder instead!
 # s3_log_folder =
 
 # The executor class that airflow should use. Choices include
 # SequentialExecutor, LocalExecutor, CeleryExecutor
-executor = SequentialExecutor
+executor = CeleryExecutor
 
 # The SqlAlchemy connection string to the metadata database.
 # SqlAlchemy supports many different database engine, more information
 # their website
-sql_alchemy_conn = sqlite:////var/lib/airflow/airflow/airflow.db
+sql_alchemy_conn = mysql://USERNAME:PASSWORD@MYSQLHOST:3306/airflow
 
 # The SqlAlchemy pool size is the maximum number of database connections
 # in the pool.
@@ -59,10 +61,10 @@ max_active_runs_per_dag = 16
 # Whether to load the examples that ship with Airflow. It's good to
 # get started, but you probably want to set this to False in a production
 # environment
-load_examples = True
+load_examples = False
 
 # Where your Airflow plugins are stored
-plugins_folder = /var/lib/airflow/airflow/plugins
+plugins_folder = /var/lib/airflow/plugins
 
 # Secret key to save connection passwords in the db
 fernet_key = cryptography_not_found_storing_passwords_in_plain_text
@@ -73,18 +75,29 @@ donot_pickle = False
 # How long before timing out a python file import while filling the DagBag
 dagbag_import_timeout = 30
 
+# What security module to use (for example kerberos):
+security =
+
+# Turn unit test mode on (overwrites many configuration options with test
+# values at runtime)
+unit_test_mode = False
+
 
 [operators]
 # The default owner assigned to each new operator, unless
 # provided explicitly or passed via `default_args`
 default_owner = Airflow
+default_cpus = 1
+default_ram = 512
+default_disk = 512
+default_gpus = 0
 
 
 [webserver]
 # The base url of your website as airflow cannot guess what domain or
 # cname you are using. This is used in automated emails that
 # airflow sends to point links to the right web server
-base_url = http://localhost:8080
+base_url = http://LOCALHOST:8080
 
 # The ip specified when starting the web server
 web_server_host = 0.0.0.0
@@ -92,8 +105,21 @@ web_server_host = 0.0.0.0
 # The port on which to run the web server
 web_server_port = 8080
 
-# The time the gunicorn webserver waits before timing out on a worker
+# Paths to the SSL certificate and key for the web server. When both are
+# provided SSL will be enabled. This does not change the web server port.
+web_server_ssl_cert =
+web_server_ssl_key =
+
+# Number of seconds the gunicorn webserver waits before timing out on a worker
 web_server_worker_timeout = 120
+
+# Number of workers to refresh at a time. When set to 0, worker refresh is
+# disabled. When nonzero, airflow periodically refreshes webserver workers by
+# bringing up new ones and killing old ones.
+worker_refresh_batch_size = 1
+
+# Number of seconds to wait before refreshing a batch of workers.
+worker_refresh_interval = 30
 
 # Secret key used to run your flask app
 secret_key = temporary_key
@@ -105,8 +131,12 @@ workers = 4
 # sync (default), eventlet, gevent
 worker_class = sync
 
+# Log files for the gunicorn webserver. '-' means log to stderr.
+access_logfile = -
+error_logfile = -
+
 # Expose the configuration file in the web server
-expose_config = true
+expose_config = False
 
 # Set to true to turn on authentication:
 # http://pythonhosted.org/airflow/installation.html#web-authentication
@@ -115,20 +145,38 @@ authenticate = False
 # Filter the list of dags by owner name (requires authentication to be enabled)
 filter_by_owner = False
 
+# Filtering mode. Choices include user (default) and ldapgroup.
+# Ldap group filtering requires using the ldap backend
+#
+# Note that the ldap server needs the "memberOf" overlay to be set up
+# in order to user the ldapgroup mode.
+owner_mode = user
+
+# Default DAG orientation. Valid values are:
+# LR (Left->Right), TB (Top->Bottom), RL (Right->Left), BT (Bottom->Top)
+dag_orientation = LR
+
+# Puts the webserver in demonstration mode; blurs the names of Operators for
+# privacy.
+demo_mode = False
+
+
 [email]
 email_backend = airflow.utils.email.send_email_smtp
 
+
 [smtp]
 # If you want airflow to send emails on retries, failure, and you want to use
-# the airflow.utils.email.send_email_smtp function, you have to configure an smtp
-# server here
+# the airflow.utils.email.send_email_smtp function, you have to configure an
+# smtp server here
 smtp_host = localhost
 smtp_starttls = True
 smtp_ssl = False
 smtp_user = airflow
 smtp_port = 25
 smtp_password = airflow
-smtp_mail_from = airflow@airflow.com
+smtp_mail_from = airflow@LOCALHOST
+
 
 [celery]
 # This section only applies if you are using the CeleryExecutor in
@@ -153,17 +201,21 @@ worker_log_server_port = 8793
 # The Celery broker URL. Celery supports RabbitMQ, Redis and experimentally
 # a sqlalchemy database. Refer to the Celery documentation for more
 # information.
-broker_url = sqla+mysql://airflow:airflow@localhost:3306/airflow
+broker_url = amqp://guest:guest@RABBITMQHOST:5672/
 
 # Another key Celery setting
-celery_result_backend = db+mysql://airflow:airflow@localhost:3306/airflow
+celery_result_backend = db+mysql://USERNAME:PASSWORD@MYSQLHOST:3306/airflow
 
 # Celery Flower is a sweet UI for Celery. Airflow has a shortcut to start
-# it `airflow flower`. This defines the port that Celery Flower runs on
+# it `airflow flower`. This defines the IP that Celery Flower runs on
+flower_host = 0.0.0.0
+
+# This defines the port that Celery Flower runs on
 flower_port = 5555
 
 # Default queue that tasks get assigned to and that worker listen on.
 default_queue = default
+
 
 [scheduler]
 # Task instances listen for external kill signal (when you clear tasks
@@ -176,6 +228,20 @@ job_heartbeat_sec = 5
 # how often the scheduler should run (in seconds).
 scheduler_heartbeat_sec = 5
 
+# after how much time should the scheduler terminate in seconds
+# -1 indicates to run continuously (see also num_runs)
+run_duration = -1
+
+# after how much time a new DAGs should be picked up from the filesystem
+min_file_process_interval = 0
+
+dag_dir_list_interval = 300
+
+# How often should stats be printed to the logs
+print_stats_interval = 30
+
+child_process_log_directory = /tmp/airflow/scheduler/logs
+
 # Statsd (https://github.com/etsy/statsd) integration settings
 # statsd_on =  False
 # statsd_host =  localhost
@@ -186,6 +252,9 @@ scheduler_heartbeat_sec = 5
 # This defines how many threads will run. However airflow will never
 # use more threads than the amount of cpu cores available.
 max_threads = 2
+
+authenticate = False
+
 
 [mesos]
 # Mesos master address which MesosExecutor will connect to.
@@ -223,4 +292,22 @@ authenticate = False
 # Mesos credentials, if authentication is enabled
 # default_principal = admin
 # default_secret = admin
+
+
+[kerberos]
+ccache = /tmp/airflow_krb5_ccache
+# gets augmented with fqdn
+principal = airflow
+reinit_frequency = 3600
+kinit_path = kinit
+keytab = airflow.keytab
+
+
+[github_enterprise]
+api_rev = v3
+
+
+[admin]
+# UI to hide sensitive variable fields when set to True
+hide_sensitive_variable_fields = True
 
