Decrease Celery concurrency from 16 to 4.
Add LDAP section to airflow.cfg.
Add python script to make a user in the airflow database.

--- a/services/airflow/airflow.cfg
+++ b/services/airflow/airflow.cfg
@@ -141,6 +141,8 @@ expose_config = False
 # Set to true to turn on authentication:
 # http://pythonhosted.org/airflow/installation.html#web-authentication
 authenticate = False
+#auth_backend = airflow.contrib.auth.backends.password_auth
+#auth_backend = airflow.contrib.auth.backends.ldap_auth
 
 # Filter the list of dags by owner name (requires authentication to be enabled)
 filter_by_owner = False
@@ -189,7 +191,7 @@ celery_app_name = airflow.executors.celery_executor
 # "airflow worker" command. This defines the number of task instances that
 # a worker will take, so size up your workers based on the resources on
 # your worker box and the nature of your tasks
-celeryd_concurrency = 16
+celeryd_concurrency = 4
 
 # When you start an airflow worker, airflow starts a tiny web server
 # subprocess to serve the workers local log files to the airflow main
@@ -310,4 +312,22 @@ api_rev = v3
 [admin]
 # UI to hide sensitive variable fields when set to True
 hide_sensitive_variable_fields = True
+
+
+[ldap]
+# https://airflow.incubator.apache.org/security.html
+# set a connection without encryption: uri = ldap://<your.ldap.server>:<port>
+uri = ldaps://<your.ldap.server>:<port>
+user_filter = objectClass=*
+# in case of Active Directory you would use: user_name_attr = sAMAccountName
+user_name_attr = uid
+superuser_filter = memberOf=CN=airflow-super-users,OU=Groups,OU=RWC,OU=US,OU=NORAM,DC=example,DC=com
+data_profiler_filter = memberOf=CN=airflow-data-profilers,OU=Groups,OU=RWC,OU=US,OU=NORAM,DC=example,DC=com
+bind_user = cn=Manager,dc=example,dc=com
+bind_password = insecure
+basedn = dc=example,dc=com
+cacert = /etc/ca/ldap_ca.crt
+# Set search_scope to one of them:  BASE, LEVEL , SUBTREE
+# Set search_scope to SUBTREE if using Active Directory, and not specifying an Organizational Unit
+search_scope = LEVEL
 
