--- a/services/airflow/airflow.cfg
+++ b/services/airflow/airflow.cfg
@@ -141,7 +141,7 @@ expose_config = False
 # Set to true to turn on authentication:
 # http://pythonhosted.org/airflow/installation.html#web-authentication
 authenticate = False
-#auth_backend = airflow.contrib.auth.backends.password_auth
+auth_backend = airflow.contrib.auth.backends.password_auth
 #auth_backend = airflow.contrib.auth.backends.ldap_auth
 
 # Filter the list of dags by owner name (requires authentication to be enabled)
