Enable Airflow WebUI authN by default.

--- a/services/airflow/airflow.cfg
+++ b/services/airflow/airflow.cfg
@@ -140,7 +140,7 @@ expose_config = False
 
 # Set to true to turn on authentication:
 # http://pythonhosted.org/airflow/installation.html#web-authentication
-authenticate = False
+authenticate = True
 auth_backend = airflow.contrib.auth.backends.password_auth
 #auth_backend = airflow.contrib.auth.backends.ldap_auth
 
