--- a/services/airflow/airflow.cfg
+++ b/services/airflow/airflow.cfg
@@ -29,7 +29,7 @@ executor = CeleryExecutor
 # The SqlAlchemy connection string to the metadata database.
 # SqlAlchemy supports many different database engine, more information
 # their website
-sql_alchemy_conn = mysql://USERNAME:PASSWORD@MYSQLHOST:3306/airflow
+sql_alchemy_conn = DBCONNSTRING
 
 # The SqlAlchemy pool size is the maximum number of database connections
 # in the pool.
@@ -206,7 +206,7 @@ worker_log_server_port = 8793
 broker_url = amqp://guest:guest@RABBITMQHOST:5672/
 
 # Another key Celery setting
-celery_result_backend = db+mysql://USERNAME:PASSWORD@MYSQLHOST:3306/airflow
+celery_result_backend = db+DBCONNSTRING
 
 # Celery Flower is a sweet UI for Celery. Airflow has a shortcut to start
 # it `airflow flower`. This defines the IP that Celery Flower runs on
